Bug 333481. Sort table-part event-handling display items to ensure that the table comes before all row-groups, which come before all rows, which come before all cells. r=bernd