layout/tables/nsTableRowGroupFrame.cpp
@@ -210,7 +210,8 @@ nsTableRowGroupFrame::BuildDisplayList(nsDisplayListBuilder*   aBuilder,
   if (!IsVisibleInSelection(aBuilder))
     return NS_OK;
 
-  if (aBuilder->IsAtRootOfPseudoStackingContext()) {
+  PRBool isRoot = aBuilder->IsAtRootOfPseudoStackingContext();
+  if (isRoot) {
     // This background is created regardless of whether this frame is
     // visible or not. Visibility decisions are delegated to the
     // table background painter.
@@ -219,7 +220,7 @@ nsTableRowGroupFrame::BuildDisplayList(nsDisplayListBuilder*   aBuilder,
     NS_ENSURE_SUCCESS(rv, rv);
   }
     
-  return nsTableFrame::DisplayGenericTablePart(aBuilder, this, aDirtyRect, aLists);
+  return nsTableFrame::DisplayGenericTablePart(aBuilder, this, aDirtyRect, aLists, isRoot);
 }
 
 PRIntn
